feat: Implement multi-language support by internationalizing the TourOverlay component, updating translation files, and documenting i18n and E2E testing in project files, bumping the version to 1.7.0.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -196,6 +196,8 @@
         "add": "Add",
         "next": "Next",
         "previous": "Previous",
+        "skip": "Skip",
+        "finish": "Finish",
         "loading": "Loading..."
     },
     "builder": {
