feat: Add interactive quiz types (Model Identification, True/False) and localize quiz and step visual UI elements.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -215,6 +215,11 @@
         "interaction": "Interaction",
         "read": "Read",
         "find_part": "Find Part",
+        "quiz": "Interactive Quiz",
+        "step_image": "Step Visual",
+        "image_placeholder": "URL or Paste Image (Ctrl+V)",
+        "upload_file": "Upload File",
+        "no_img": "NO IMG",
         "place_hotspot": "Place New Hotspot",
         "hotspot_instruction": "Click on Model to Place...",
         "hotspot_linked": "Hotspot Linked",
@@ -225,6 +230,16 @@
         "hotspot_title": "Title",
         "hotspot_description": "Description",
         "create_link": "Create & Link",
+        "quiz_types": {
+            "single": "Single Choice",
+            "multiple": "Multiple Choice",
+            "model_click": "3D Identification",
+            "true_false": "True / False"
+        },
+        "true_false": {
+            "true": "TRUE",
+            "false": "FALSE"
+        },
         "errors": {
             "select_model": "Select a 3D model for this step first.",
             "enter_title": "Please enter a lesson title",
@@ -277,11 +292,17 @@
             "interactive_lesson": "Interactive Lesson",
             "step_x_of_y": "Step {{current}} of {{total}}",
             "no_model": "No model attached to this step.",
-            "quiz": "Quiz",
+            "quiz": "Interactive Quiz",
             "submit_answer": "Submit Answer",
             "correct_answer": "Correct Answer!",
             "incorrect_answer": "Incorrect. Try again?",
             "retry": "Retry",
+            "multiple_choice": "Multiple Selection",
+            "model_identification": "3D Identification",
+            "true_false_title": "True / False",
+            "click_instruction": "Use the 3D view to identify the target part.",
+            "target_prompt": "Click on the {{target}}",
+            "retry_mesh": "Try again! That was {{meshName}}.",
             "find_task": "Task: Find Component",
             "find_instruction": "Locate and click on the 3D model part: {{target}}",
             "find_success": "Correct! You found the {{target}}.",
