--- a/src/locales/sr/translation.json
+++ b/src/locales/sr/translation.json
@@ -215,6 +215,11 @@
         "interaction": "Interakcija",
         "read": "Čitanje",
         "find_part": "Pronađi deo",
+        "quiz": "Interaktivni Kviz",
+        "step_image": "Vizuelni prikaz koraka",
+        "image_placeholder": "URL ili nalepi sliku (Ctrl+V)",
+        "upload_file": "Otpremi datoteku",
+        "no_img": "BEZ SLIKE",
         "place_hotspot": "Postavi novi hotspot",
         "hotspot_instruction": "Kliknite na model da postavite...",
         "hotspot_linked": "Hotspot povezan",
@@ -225,6 +230,16 @@
         "hotspot_title": "Naslov",
         "hotspot_description": "Opis",
         "create_link": "Kreiraj i poveži",
+        "quiz_types": {
+            "single": "Jedan izbor",
+            "multiple": "Više izbora",
+            "model_click": "Identifikacija na modelu",
+            "true_false": "Tačno / Netačno"
+        },
+        "true_false": {
+            "true": "TAČNO",
+            "false": "NETAČNO"
+        },
         "errors": {
             "select_model": "Prvo izaberite 3D model za ovaj korak.",
             "enter_title": "Molimo unesite naslov lekcije",
@@ -277,11 +292,17 @@
             "interactive_lesson": "Interaktivna Lekcija",
             "step_x_of_y": "Korak {{current}} od {{total}}",
             "no_model": "Nema modela priloženog ovom koraku.",
-            "quiz": "Kviz",
+            "quiz": "Interaktivni Kviz",
             "submit_answer": "Pošalji Odgovor",
             "correct_answer": "Tačan Odgovor!",
             "incorrect_answer": "Netačno. Pokušajte ponovo?",
             "retry": "Pokušaj ponovo",
+            "multiple_choice": "Više izbora",
+            "model_identification": "Identifikacija na modelu",
+            "true_false_title": "Tačno / Netačno",
+            "click_instruction": "Koristite 3D prikaz da identifikujete traženi deo.",
+            "target_prompt": "Kliknite na {{target}}",
+            "retry_mesh": "Pokušajte ponovo! To je bio deo {{meshName}}.",
             "find_task": "Zadatak: Pronađi Komponentu",
             "find_instruction": "Pronađite i kliknite na deo 3D modela: {{target}}",
             "find_success": "Tačno! Pronašli ste {{target}}.",
