feat: Introduce Text-to-Speech functionality, update help documentation and translations, and integrate into the VR viewer.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,7 +18,17 @@
         },
         "profile": "Profile",
         "theme": "Theme",
-        "language": "Language"
+        "language": "Language",
+        "read_aloud": "Read Aloud",
+        "gamification": {
+            "challenge_mode": "Challenge Mode",
+            "time": "Time",
+            "complete": "Challenge Complete!",
+            "leaderboard": "Leaderboard",
+            "rank": "Rank",
+            "user": "User",
+            "score": "Score"
+        }
     },
     "home": {
         "welcome_title": "Welcome to THE GEAR",
