feat: Add 'register' translation key and refactor 'login' and 'register' translation keys to the 'nav' namespace.

--- a/src/locales/el/translation.json
+++ b/src/locales/el/translation.json
@@ -22,6 +22,7 @@
         },
         "language": "Αλλαγή γλώσσας (EL)",
         "login": "Σύνδεση",
+        "register": "Εγγραφή",
         "profile": "Προφίλ"
     },
     "hero": {
