--- a/src/locales/tr/translation.json
+++ b/src/locales/tr/translation.json
@@ -22,6 +22,7 @@
         },
         "language": "Dili Değiştir (TR)",
         "login": "Giriş Yap",
+        "register": "Kayıt Ol",
         "profile": "Profil"
     },
     "hero": {
