--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -22,6 +22,7 @@
         },
         "language": "Mudar Idioma (PT)",
         "login": "Entrar",
+        "register": "Registrar",
         "profile": "Perfil"
     },
     "hero": {
